--- a/SimpleObjectCache.nuspec
+++ b/SimpleObjectCache.nuspec
@@ -2,11 +2,11 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
 	<metadata>
 		<id>SimpleObjectCache</id>
-		<title>SimpleObjectCache for .NET</title>
+		<title>SimpleObjectCache for .NET systems</title>
 		<version>1.0.0</version>
 		<authors>Nicola Iarocci</authors>
 		<owners>Nicola Iarocci</owners>
-		<description>Simple cross-platform object cache for .NET</description>
+		<description>Simple cross-platform object cache for .NET systems</description>
 		<releaseNotes>First public release</releaseNotes>
 		<copyright>Copyright 2016 Nicola Iarocci</copyright>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
