--- a/SimpleObjectCache.nuspec
+++ b/SimpleObjectCache.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
 	<metadata>
 		<id>SimpleObjectCache</id>
-		<title>SimpleObjectCache for .NET systems</title>
+		<title>SimpleObjectCache</title>
 		<version>1.0.0</version>
 		<authors>Nicola Iarocci</authors>
 		<owners>Nicola Iarocci</owners>
