--- a/SimpleObjectCache/SimpleObjectCache.csproj
+++ b/SimpleObjectCache/SimpleObjectCache.csproj
@@ -2,9 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.1</TargetFramework>
-    <PackageTargetFallback>$(PackageTargetFallback);portable-win+net45+wp8+win81+wpa8</PackageTargetFallback>
     <PackageId>SimpleObjectCache</PackageId>
-    <Version>1.0.0</Version>
+    <Version>2.0.0</Version>
     <Authors>Nicola Iarocci</Authors>
     <Company>CIR 2000</Company>
     <Product>SimpleObjectCache</Product>
@@ -14,13 +13,13 @@
     <PackageProjectUrl>https://github.com/nicolaiarocci/SimpleObjectCache</PackageProjectUrl>
     <RepositoryUrl>https://github.com/nicolaiarocci/SimpleObjectCache</RepositoryUrl>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
   </PropertyGroup>
-
-  <Import Project="..\SimpleObjectCache.Core\SimpleCache.Core.projitems" Label="Shared" />
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="SQLite.Net.Async-PCL" Version="3.1.1" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.3.3" />
   </ItemGroup>
 
 </Project>
